# blog

./: .gitignore  .gitmodules  CNAME  README.md  deploy.sh  index.html  mdoc.sh  site.cabal  site.hs  stack.yaml
content/: about.md  talks.md  writings.md
content/posts/: coming-soon.md  data-oriented.md  flatten.md  programs-as-values-I.md  programs-as-values-II.md  programs-as-values-III.md  programs-as-values-IV.md  programs-as-values-V.md  programs-as-values-VI.md  programs-as-values-VII.md  programs-as-values-draft.md  spqr.markdown  tailrec.md  unison-aoc-2023.md
content/staging/: data-oriented.md  flatten.md  infix.md  oop-data-oriented.md  paxos-failures.md  programs-as-values-draft.md  programs-as-values.md  scale-perf.md  scale.md  simplicity.md  variance.md
src/: site.hs
static/css/: spaceg.stylesheets.css
static/highlight/: highlight.pack.js
templates/: archive.html  footer.html  head.html  index.html  nav.html  page.html  post.html  talks.html  writings.html
