name:                site
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc
