name:                site
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base,
                       hakyll,
                       pandoc,
                       aeson,
                       text,
                       mtl,
                       bifunctors
